Bug 60087 - FILESAVE: .xlsx: functions ACOT,ACOTH,COT,COTH,CSC,CSCH,SEC,SECH wrongly written
Summary: FILESAVE: .xlsx: functions ACOT,ACOTH,COT,COTH,CSC,CSCH,SEC,SECH wrongly written
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.2 rc
Hardware: All All
: high critical
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.1.0 target:4.0.1
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-30 19:54 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2013-02-01 15:34 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
testcase source (12.49 KB, application/x-vnd.oasis.opendocument.spreadsheet)
2013-01-30 21:32 UTC, Eike Rathke (retired, only occasionally showing up)
Details
testcase exported xlsx old 4.0.0.2 (7.00 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2013-01-30 21:33 UTC, Eike Rathke (retired, only occasionally showing up)
Details
testcase exported xlsx new with change (7.01 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2013-01-30 21:33 UTC, Eike Rathke (retired, only occasionally showing up)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2013-01-30 19:54:29 UTC
Exporting to .xlsx the spreadsheet functions ACOT, ACOTH, COT, COTH, CSC, CSCH, SEC and SECH are wrongly written as ATAN, ATANH, TAN, TANH, SIN, SINH, COS and COSH.

This was not the case in 3.6.x
Comment 1 Eike Rathke (retired, only occasionally showing up) 2013-01-30 20:41:10 UTC
Or actually in 3.6.x it works only half way because the _xlfn. prefix is missing and the functions can't be read again after re-import.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2013-01-30 21:05:07 UTC
Cause is that for old .xls BIFF export those functions are rewritten using functions known to Excel at that point, substituting op-codes, for example COT(x)=(1/TAN(x))

The rewrite does not happen for OOXML but the op-codes were still substituted.
Comment 3 Eike Rathke (retired, only occasionally showing up) 2013-01-30 21:32:42 UTC
Created attachment 73957 [details]
testcase source
Comment 4 Eike Rathke (retired, only occasionally showing up) 2013-01-30 21:33:05 UTC
Created attachment 73958 [details]
testcase exported xlsx old 4.0.0.2
Comment 5 Eike Rathke (retired, only occasionally showing up) 2013-01-30 21:33:24 UTC
Created attachment 73959 [details]
testcase exported xlsx new with change
Comment 6 Not Assigned 2013-01-30 21:38:40 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0c7a1b6e10011930b703897073b8d41e94f7d827

resolved fdo#60087 corrected .xlsx export of functions



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Eike Rathke (retired, only occasionally showing up) 2013-01-30 21:49:41 UTC
Pending review for 4-0 as https://gerrit.libreoffice.org/1929
Comment 8 Eike Rathke (retired, only occasionally showing up) 2013-01-30 21:55:41 UTC
Note: this change needs the change of bug 60043 to cleanly apply, though that is not needed for functionality.
Comment 9 Not Assigned 2013-02-01 15:04:59 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0998b52b725688cdd3c8f6e5150e0d74995164d3&h=libreoffice-4-0

resolved fdo#60087 corrected .xlsx export of functions


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Kohei Yoshida 2013-02-01 15:34:26 UTC
I'll mark this fixed.